# src/controllers/user.js
@@ -38,12 +38,7 @@ module.exports = {
                 in: 'body',
                 required: true,
                 schema: {
-                    "username": "test",
-                    "password": "1234",
-                    "email": "test@site.com",
-                    "isActive": true,
-                    "isStaff": false,
-                    "isAdmin": false,
+                    $ref: '#/definitions/User'
                 }
             }
         */
